#+TITLE: Changelog

* Unreleased

* 2025-09-03
** Added
   - aliases: `update/dependency-versions` automatically updates everything to new versions
   - dev: `dependencies-update` & `dependencies-outdated` make tasks

** Updated
   - dev: update GitHub actions versions for all workflows

   | :file                                             | :name                                | :current   | :latest    |
   |---------------------------------------------------|--------------------------------------|------------|------------|
   | .github/workflows/changelog-check.yaml            | actions/checkout                     | v4         | v5         |
   | .github/workflows/lint-review.yaml                | actions/checkout                     | v4         | v5         |
   |                                                   | nnichols/clojure-lint-action         | v4         | v6         |
   | .github/workflows/megalinter.yaml                 | actions/checkout                     | v4         | v5         |
   | .github/workflows/quality-checks.yaml             | actions/checkout                     | v4         | v5         |
   |                                                   | clj-kondo/clj-kondo                  | 2025.06.05 | 2025.07.28 |
   | .github/workflows/scheduled-version-check.yaml    | actions/checkout                     | v4         | v5         |


   - aliases: practicalli project template release 2025-09-04
   - aliases: update library versions using `make dependencies-update`

   | :name                                | :current   | :latest    |
   |--------------------------------------|------------|------------|
   | com.github.flow-storm/clojure        | 1.12.1     | 1.12.2     |
   | com.github.flow-storm/flow-storm-dbg | 4.4.6      | 4.5.3      |
   | djblue/portal                        | 0.59.1     | 0.61.0     |
   | io.github.nextjournal/clerk          | 0.17.1102  | 0.18.1150  |